--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,3 +1,5 @@
+<%- include('./header') %>
+
 <h1>Contact Us</h1>
 <form method="POST" action="/contact">
   <input type="text" name="name" placeholder="Your Name" required /><br />
@@ -5,3 +7,5 @@
   <textarea name="message" placeholder="Your Message" required></textarea><br />
   <button type="submit">Send</button>
 </form>
+
+<%- include('./footer') %>
