--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -1,3 +1,5 @@
+<%- include('./header') %>
+
 <%- include('../partials/header') %>
 <!--cards made by Bootstrap-->
 <div class="container mt-5">
@@ -20,4 +22,4 @@
   </div>
 </div>
 
-
+<%- include('./footer') %>
