Added CSS to the bootstrap header partial

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,1 +1,14 @@
-<h1>Welcome to the Community Portal</h1>
+ 
+ <%- include('../partials/header') %>
+
+<!--Hero Section-->
+    <section class="hero-section">
+        <div class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column">
+            <h1>Responsive Navbar</h1>
+            <h1>Bootstrap 5</h1>
+
+        </div>
+
+    </section>
+
+<!--End Hero Section-->
