Updated header and footer

--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -1,5 +1,3 @@
-<%- include('./header') %>
-
 <%- include('../partials/header') %>
 <!--cards made by Bootstrap-->
 <div class="container mt-5">
@@ -22,4 +20,4 @@
   </div>
 </div>
 
-<%- include('./footer') %>
+<%- include('../partials/footer') %>
