--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,4 +1,4 @@
-<%- include('./header') %>
+<%- include('../partials/header') %>
 
 <h1>Contact Us</h1>
 <form method="POST" action="/contact">
@@ -8,4 +8,4 @@
   <button type="submit">Send</button>
 </form>
 
-<%- include('./footer') %>
+<%- include('../partials/footer') %>
