--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,4 +7,8 @@
   <title>Koos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" /> <!-- Bootstrap CSS -->
 </head>
+<nav>
+      <a href="/">Home</a> | <a href="/about">About</a> |
+      <a href="/events">Events</a> | <a href="/contact">Contact</a>
+    </nav>
 <body>
