Added content into the Thank you page.

--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,2 +1,9 @@
-<h1>Thank You!</h1>
-<p>Your message has been received.</p>
+<%- include('../partials/header') %>
+
+<div class="container mt-5 text-center">
+    <h1>Thank You!</h1>
+    <p>Your message has been received. We appreciate your feedback and will get back to you shortly.</p>
+    <a href="/" class="btn btn-primary mt-3">Go Back Home</a>
+</div>
+
+<%- include('../partials/footer') %>
