Added comments to contact,events, thankyou pages

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,3 +1,4 @@
+<!--Contact: Simple contact form (name, email, message) – stores to in-memory array -->
 <%- include('../partials/header') %>
 
 <h1>Contact Us</h1>
