--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,3 +1,5 @@
+<!--Thank You: Confirmation page after form submission -->
+
 <%- include('../partials/header') %>
 
 <div class="container mt-5 text-center">
