Added Form Validation in contact.js and edited the structure of the form in contact.ejs

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,11 +1,24 @@
 <%- include('../partials/header') %>
 
 <h1>Contact Us</h1>
-<form method="POST" action="/contact">
-  <input type="text" name="name" placeholder="Your Name" required /><br />
-  <input type="email" name="email" placeholder="Your Email" required /><br />
-  <textarea name="message" placeholder="Your Message" required></textarea><br />
+<form id="contactForm" method="POST" action="/contact">
+  <div>
+    <input type="text" name="name" id="name" placeholder="Your Name" required /><br>
+    <small class="error-message" id="nameError"></small><br><br>
+  </div>
+  
+  <div>
+    <input type="email" name="email" id="email" placeholder="Your Email" required /><br>
+    <small class="error-message" id="emailError"></small><br><br>
+  </div>
+  
+  <div>
+    <textarea name="message" id="message" placeholder="Your Message" required></textarea><br>
+    <small class="error-message" id="messageError"></small><br>
+  </div>
+  
   <button type="submit">Send</button>
 </form>
 
 <%- include('../partials/footer') %>
+<script src="/data/contact.js"></script>
