--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -10,7 +10,7 @@
 
 <!-- Optional: Add a message about redirecting -->
 <div class="alert alert-info mt-3">
-    <strong>Note:</strong> You will be redirected to the home page in 10 seconds.
+    <strong>Note:</strong> You will be redirected to the home page in 1 minute.
 
     <!--// Redirect to home page after 1 minute (60000 milliseconds)-->
     <script>
