--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,1 +1,18 @@
-<h1>About Us</h1>
+<%= include ('partials/header') %>
+
+<div class = "container">
+
+<h1>About Our Team</h1>
+<div class = "row">
+    <%= team.forEach(member => { %>
+        <div class = "team-member">
+            <img src = "<%= member.image %>" alt = <%= member.name %> class= "team-img" />
+            <h3><%= member.name %></h3>
+            <h4><%= member.role %></h4>
+        </div>
+   <%= }); %>
+</div>
+
+</div>
+
+<%= include ('partials/footer') %>
