--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,18 +1,24 @@
-<%= include ('../partials/header') %>
+<%- include ('../partials/header') %>
 
 <div class = "container">
 
 <h1>About Our Team</h1>
 <div class = "row">
-    <%= team.forEach(member => { %>
-        <div class = "team-member">
-            <img src = "<%= member.image %>" alt = <%= member.name %> class= "team-img" />
-            <h3><%= member.name %></h3>
-            <h4><%= member.role %></h4>
+    <% team.forEach(member => { %>
+        <div class="col-md-4">
+        <div class="card h-100 shadow-sm">
+          <img src="<%= member.image %>" class="card-img-top" alt="<%= member.name %>">
+          <div class="card-body">
+            <p class="card-text">
+              <strong>Name:</strong> <%= member.name %><br>
+              <strong>Role:</strong> <%= member.role %>
+            </p>
+          </div>
         </div>
-   <%= }); %>
+      </div>
+   <% }); %>
 </div>
 
 </div>
 
-<%= include ('../partials/footer') %>
+<%- include ('../partials/footer') %>
