Commented purposes of pages

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,3 +1,5 @@
+<!--Home: Welcome message + placeholder for upcoming events (dynamic later)-->
+
 <%- include('../partials/header') %>
 
 <h1>Welcome to the Community Portal</h1>
