--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,3 +1,4 @@
+<!--About: Info about the team or organization (from an array in the backend)-->
 <%- include ('../partials/header') %>
 
 <div class = "container">
