Made some minor changes to About page and Header

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <nav>
-      <a href="/">Home</a> | <a href="/about">About</a> |
-      <a href="/events">Events</a> | <a href="/contact">Contact</a>
+      <a href="/">Home</a> | <a href="/events">Events</a> |
+      <a href="/contact">Contact</a> | <a href="/about">About</a>
     </nav>
 <body>
