--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -6,7 +6,7 @@
 <h1>About Our Team</h1>
 <div class = "row">
     <% team.forEach(member => { %>
-        <div class="col-md-4">
+        <div class="col-md-4 member mb-4">
         <div class="card h-100 shadow-sm">
           <img src="<%= member.image %>" class="card-img-top" alt="<%= member.name %>">
           <div class="card-body">
