--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" /> <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<nav>
-      <a href="/">Home</a> | <a href="/events">Events</a> |
-      <a href="/contact">Contact</a> | <a href="/about">About</a>
-    </nav>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">Community Portal</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link <%= title === 'Home' ? 'active' : '' %>" href="/">Home</a>
+        <a class="nav-link <%= title === 'Events' ? 'active' : '' %>" href="/events">Events</a>
+        <a class="nav-link <%= title === 'Contact' ? 'active' : '' %>" href="/contact">Contact</a>
+        <a class="nav-link <%= title === 'About' ? 'active' : '' %>" href="/about">About</a>
+      </div>
+    </div>
+  </div>
+</nav>
+
 <body>
