--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -44,9 +44,8 @@
 <br>
 
 <div class="welcome-container">
-    <h1 >Welcome to Our Vibrant and Ever-Growing Community Portal!</h1>
-    <p>We are absolutely thrilled to have you join us on this exciting journey of connection, collaboration, and celebration! Dive into a rich and engaging experience where you can explore a diverse array of upcoming events, discover the inspiring stories and passion behind our dedicated team, and stay fully immersed in all the dynamic happenings within our bustling community. Whether you’re here to learn something new, forge meaningful connections, share your unique talents, or simply soak in the energy of our collective spirit, there’s a place for everyone in our inclusive hub. Get ready to engage, contribute, and be a part of something truly special. Join us today and let’s build an unforgettable community experience together!</p>
-
+    <h1><%= title %></h1>
+    <p><%= welcomeParagraph %></p>
 </div>
     
     <div class="card-container">
