--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,3 +1,4 @@
+ <%- include('../partials/header') %>
 <h1>Contact Us</h1>
 <form method="POST" action="/contact">
   <input type="text" name="name" placeholder="Your Name" required /><br />
