Changed header and footer tags

--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -12,7 +12,7 @@
 <div class="alert alert-info mt-3">
     <strong>Note:</strong> You will be redirected to the home page in 1 minute.
 
-    <!--// Redirect to home page after 1 minute (60000 milliseconds)-->
+    <!-- Redirect to home page after 1 minute (60000 milliseconds)-->
     <script>
         setTimeout(function() {
            window.location.href = "/";
