--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href=/css/style.css>
 </head>
 
-<body>
-
+<header>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
@@ -37,7 +36,7 @@
                             <a class="nav-link mx-lg-2" href="/contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link mx-lg-2" href="/event">Events</a>
+                            <a class="nav-link mx-lg-2" href="/events">Events</a>
                         </li>
                     </ul>
                 </div>
@@ -56,6 +55,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
-</body>
+</header>
 
 </html>
