fixed div error on contact page

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -25,6 +25,8 @@
       <button type="submit" class="btn btn-primary w-100">Send</button>
     </form>
   </div>
+</div>
 
+  <script src="/data/contact.js"></script>
   <%- include('../partials/footer') %>
-<script src="/data/contact.js"></script>
+
