--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+
+
+header{
+    padding-bottom: 60px;
+}
+
 .error-message {
     color: red;
     font-size: 0.9em;
@@ -24,7 +30,6 @@ footer{
 .navbar{
     background-color: #fff;
     height: 80px;
-    margin: 20px;
     border-radius: 16px;
     padding: 0.5rem;
 }
@@ -117,4 +122,13 @@ footer{
 
 .hero-section h2{
     font-size: 1.2em;
+}
+
+.containerAbout{
+    padding-top: 20px;
+}
+
+.containerAbout h1{
+    text-align: center;
+    padding: 30px;
 }
