--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,6 +1,6 @@
 <%- include ('../partials/header') %>
 
-<div class = "container">
+<div class = "containerAbout">
 
 <h1>About Our Team</h1>
 <div class = "row">
