--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -3,7 +3,7 @@
 
 <div class = "container">
 
-<h1>About Our Team</h1>
+<h1 class="text-center">About Our Team</h1>
 <div class = "row">
     <% team.forEach(member => { %>
         <div class="col-md-4 member mb-4">
