--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,6 +2,27 @@
 
 <%- include('../partials/header') %>
 
-<h1>Welcome to the Community Portal</h1>
+<div class="welcome-container">
+    <h1><%= heading %></h1>
+    <p><%= welcomeParagraph %></p>
+</div>
+    
+    <div class="card-container d-flex gap-3 flex-wrap">
+  <% if (upcomingEvents.length > 0) { %>
+    <% upcomingEvents.forEach(event => { %>
+      <div class="card" style="width: 270px;">
+        <img src="<%= event.image %>" class="card-img-top" style="height: 150px;" alt="<%= event.title %>">
+        <div class="card-body">
+          <h5 style="font-size:20px">Upcoming Event</h5>
+          <p class="card-text m-0"><strong>Title:</strong> <%= event.title %></p>
+          <p class="card-text m-0"><strong>Date:</strong> <%= event.date %></p>
+          <p class="card-text m-0"><strong>Location:</strong> <%= event.location %></p>
+        </div>
+      </div>
+    <% }) %>
+  <% } else { %>
+    <p>No upcoming events.</p>
+  <% } %>
+</div>
 
 <%- include('../partials/footer') %>
