--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -46,36 +46,13 @@
 
             <div class="row align-items-center">
 
-                <div class="col-md-7 col-lg-8">
+                <div class="text-center">
                     <p>
                         Copyright @2025 All right reserved by:
                         <a href="#" style="text-decoration: none;">
                             <strong class ="text-warning"> Belgium Campus</strong>
                         </a>
                     </p>
-                </div>
-
-                <div class="col-md-5 col-lg-4">
-                    <div class="text-center text-md-right">
-                    
-                    <ul class="list-unstyled list-inline">
-                        <li class="list-inline-item">
-                            <a href="https://www.facebook.com/" class="btn-floating btn-sm text-white " style="font-size: 23px;"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://x.com/home" class="btn-floating btn-sm text-white " style="font-size: 23px;"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.google.co.za/" class="btn-floating btn-sm text-white " style="font-size: 23px;"><i class="fab fa-google-plus"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.linkedin.com/" class="btn-floating btn-sm text-white " style="font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.youtube.com/" class="btn-floating btn-sm text-white " style="font-size: 23px;"><i class="fab fa-youtube"></i></a>
-                        </li>
-                    </ul>
-                 </div>
                 </div>
             </div>          
         </div>
