Made footer smaller

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-white pt-5 pb-4 mt-5">
+<footer class="bg-dark text-white mt-5">
     <div class="container text-center text-md-left">
         <div class="row text-center text-nd-left">
 
