--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,28 +1,34 @@
 <!--Home: Welcome message + placeholder for upcoming events (dynamic later)-->
 
 <%- include('../partials/header') %>
-
-<div class="welcome-container">
+<div class="container text-center">
+  <div class="welcome-container">
     <h1><%= heading %></h1>
     <p><%= welcomeParagraph %></p>
-</div>
-    
-    <div class="card-container d-flex gap-3 flex-wrap">
-  <% if (upcomingEvents.length > 0) { %>
-    <% upcomingEvents.forEach(event => { %>
-      <div class="card" style="width: 270px;">
-        <img src="<%= event.image %>" class="card-img-top" style="height: 150px;" alt="<%= event.title %>">
-        <div class="card-body">
-          <h5 style="font-size:20px">Upcoming Event</h5>
-          <p class="card-text m-0"><strong>Title:</strong> <%= event.title %></p>
-          <p class="card-text m-0"><strong>Date:</strong> <%= event.date %></p>
-          <p class="card-text m-0"><strong>Location:</strong> <%= event.location %></p>
-        </div>
+  </div>
+
+  <div class="card-container justify-content-center d-flex gap-3 flex-wrap">
+    <% if (upcomingEvents.length > 0) { %> <% upcomingEvents.forEach(event => {
+    %>
+    <div class="card" style="width: 270px">
+      <img
+        src="<%= event.image %>"
+        class="card-img-top"
+        style="height: 150px"
+        alt="<%= event.title %>"
+      />
+      <div class="card-body">
+        <h5 style="font-size: 20px"><%= event.title %></h5>
+        <p class="card-text m-0"><strong>Date:</strong> <%= event.date %></p>
+        <p class="card-text m-0">
+          <strong>Location:</strong> <%= event.location %>
+        </p>
       </div>
-    <% }) %>
-  <% } else { %>
+    </div>
+    <% }) %> <% } else { %>
     <p>No upcoming events.</p>
-  <% } %>
+    <% } %>
+  </div>
 </div>
 
 <%- include('../partials/footer') %>
