Added shadow to home page cards

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -10,7 +10,7 @@
   <div class="card-container justify-content-center d-flex gap-3 flex-wrap">
     <% if (upcomingEvents.length > 0) { %> <% upcomingEvents.forEach(event => {
     %>
-    <div class="card" style="width: 270px">
+    <div class="card shadow-sm" style="width: 270px">
       <img
         src="<%= event.image %>"
         class="card-img-top"
