--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -7,11 +7,11 @@
   <div class="row g-4">
     <% events.forEach(event => { %>
       <div class="col-md-4">
-        <div class="card h-100 shadow-sm">
+        <div class="card h-100 shadow-sm hover-shadow">
           <img src="<%= event.image %>" class="card-img-top" alt="<%= event.title %>">
-          <div class="card-body">
-            <h5 class="card-title"><%= event.title %></h5>
-            <p class="card-text">
+          <div class="card-body bg-dark">
+            <h5 class="card-title text-warning"><%= event.title %></h5>
+            <p class="card-text text-white">
               <strong>Date:</strong> <%= event.date %><br>
               <strong>Location:</strong> <%= event.location %>
             </p>
