--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -22,13 +22,7 @@
         <div class="invalid-feedback" id="messageError"></div>
       </div>
 
-      <button type="submit"
-  class="btn btn-primary w-100 bg-warning text-dark border-dark"
-  onmouseover="this.classList.replace('bg-warning', 'bg-dark'); this.classList.replace('text-dark', 'text-warning'); this.classList.replace('border-dark', 'border-warning')"
-  onmouseout="this.classList.replace('bg-dark', 'bg-warning'); this.classList.replace('text-warning', 'text-dark'); this.classList.replace('border-warning', 'border-dark')">
-  Send
-</button>
-
+      <button type="submit" class="btn btn-primary w-100 bg-warning text-dark border-dark contact-btn">Send</button>
     </form>
   </div>
 </div>
