--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -22,7 +22,7 @@
         <div class="invalid-feedback" id="messageError"></div>
       </div>
 
-      <button type="submit" class="btn btn-primary w-100 bg-warning text-dark border-dark contact-btn">Send</button>
+      <button type="submit" class="btn btn-primary w-100 bg-warning text-dark border-dark hover-btn">Send</button>
     </form>
   </div>
 </div>
