Updated welcoming paragraph

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,9 +2,9 @@
 
 <%- include('../partials/header') %>
 <div class="container text-center">
-  <div class="welcome-container">
-    <h1><%= heading %></h1>
-    <p><%= welcomeParagraph %></p>
+  <div class="welcome-container px-5">
+    <h1 class="pt-3 px-5"><%= heading %></h1>
+    <p class="py-2 px-5"><%= welcomeParagraph %></p>
   </div>
 
   <div class="card-container justify-content-center d-flex gap-3 flex-wrap">
