--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -8,7 +8,7 @@
 </div>
 
 <!-- Optional: Add a message about redirecting -->
-<div class="alert alert-info mt-3 bg-warning text-dark">
+<div class="alert alert-info mt-3 bg-warning text-dark border-dark bg-opacity-75 container mt-5 d-flex flex-column justify-content-center align-items-center w-50">
     <strong>Note:</strong> You will be redirected to the home page in 1 minute.
 
     <!--// Redirect to home page after 1 minute (60000 milliseconds)-->
