--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,9 @@
   transition: box-shadow 0.6s ease, transform 0.6s ease; 
   /* This makes the box enlarge and adds a shadow, giving the effect of the event box popping out of the page */
 }
+
+
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23ffc107' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
