--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,27 +1,27 @@
 <!--Home: Welcome message + placeholder for upcoming events (dynamic later)-->
 
 <%- include('../partials/header') %>
-<div class="container text-center">
+<div class="container text-center mt-5">
   <div class="welcome-container px-5">
-    <h1 class="pt-3 px-5"><%= heading %></h1>
+    <h1 class="mb-4"><%= heading %></h1>
     <p class="py-2 px-5"><%= welcomeParagraph %></p>
   </div>
 
   <div class="card-container justify-content-center d-flex gap-3 flex-wrap">
     <% if (upcomingEvents.length > 0) { %> <% upcomingEvents.forEach(event => {
     %>
-    <div class="card shadow-sm" style="width: 270px">
+    <div class="card shadow-sm hover-shadow" style="width: 270px">
       <img
         src="<%= event.image %>"
         class="card-img-top"
         style="height: 150px"
         alt="<%= event.title %>"
       />
-      <div class="card-body">
-        <h5 style="font-size: 20px"><%= event.title %></h5>
-        <p class="card-text m-0"><strong>Date:</strong> <%= event.date %></p>
-        <p class="card-text m-0">
-          <strong>Location:</strong> <%= event.location %>
+      <div class="card-body bg-dark">
+        <h5 class="text-warning" style="font-size: 20px"><%= event.title %></h5>
+        <p class="card-text m-0 text-white"><strong class="text-warning">Date:</strong> <%= event.date %></p>
+        <p class="card-text m-0 text-white">
+          <strong class="text-warning">Location:</strong> <%= event.location %>
         </p>
       </div>
     </div>
