--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,8 @@
 </head>
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand text-warning" href="/">Community Portal</a>
+    <img src="/public/images/snail-logo.png" alt="Community Portal">
+    <!-- <a class="navbar-brand text-warning" href="/">Community Portal</a> -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
