--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,22 +1,22 @@
 
 <%- include('../partials/header') %>
+<div class="container mt-5 d-flex flex-column justify-content-center align-items-center">
+    <div class="thankYouMessage text-center">
+        <h1>Thank You!</h1>
+        <p>Your message has been received. We appreciate your feedback and will get back to you shortly.</p>
+        <a href="/" class="btn btn-primary mt-3 text-dark bg-warning hover-btn border-dark">Go Back Home</a>
+    </div>
 
-<div class="container mt-5 text-center">
-    <h1>Thank You!</h1>
-    <p>Your message has been received. We appreciate your feedback and will get back to you shortly.</p>
-    <a href="/" class="btn btn-primary mt-3 text-dark bg-warning hover-btn border-dark">Go Back Home</a>
+    <!-- Message about redirecting -->
+    <div class="alert alert-info mt-3 bg-warning text-dark border-dark bg-opacity-75 container mt-5 d-flex flex-column justify-content-center align-items-center w-50">
+        <strong>Note:</strong> You will be redirected to the home page in 1 minute.
+
+        <!--// Redirect to home page after 1 minute (60000 milliseconds)-->
+        <script>
+            setTimeout(function() {
+            window.location.href = "/";
+            }, 60000);
+        </script>
+    </div>
 </div>
-
-<!-- Optional: Add a message about redirecting -->
-<div class="alert alert-info mt-3 bg-warning text-dark border-dark bg-opacity-75 container mt-5 d-flex flex-column justify-content-center align-items-center w-50">
-    <strong>Note:</strong> You will be redirected to the home page in 1 minute.
-
-    <!--// Redirect to home page after 1 minute (60000 milliseconds)-->
-    <script>
-        setTimeout(function() {
-           window.location.href = "/";
-        }, 60000);
-    </script>
-</div>
-
 <%- include('../partials/footer') %>
