--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,25 +6,14 @@
         <h5 class="text-uppercase mb-4 font-weight bold text-warning">Community Portal Hub</h5>
         <p>A dynamic platform built by Belgium Campus Students to connect people through events and collaboration. Powered by Node.js, Express, and EJS for seamless interaction and engagement.</p>
 
-
         </div>
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h5 class="text-uppercase mb-4 font-weight-bold text-warning">SERVICES</h5>
-                <p>
-                    <a href="#" class="text-white" style="text-decoration: none;"> Event Management </a>
-                </p>
-                <p>
-                    <a href="#" class="text-white" style="text-decoration: none;"> Community Updates </a>
-                </p>
-                <p>
-                   <a href="#" class="text-white" style="text-decoration: none;"> Member Support </a>
-                </p>
-                <p>
-                    <a href="#" class="text-white" style="text-decoration: none;"> Resource Sharing </a>
-                </p>
-
+                <p class="text-white" style="text-decoration: none;"> Event Management </p>
+                <p class="text-white" style="text-decoration: none;"> Community Updates </p>
+                <p class="text-white" style="text-decoration: none;"> Member Support </p>
+                <p class="text-white" style="text-decoration: none;"> Resource Sharing 
             </div>
-
 
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contact</h5>
