--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,10 @@
 </head>
 <nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-    <img src="/public/images/snail-logo.png" alt="Community Portal">
-    <!-- <a class="navbar-brand text-warning" href="/">Community Portal</a> -->
+    <a class="navbar-brand d-flex align-items-center text-white" href="/">
+    <img src="./images/snail-logo.png" alt="Community Portal"
+         class="img-fluid" style="width: 40px; height: auto;">
+  </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
       aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
