--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,26 +6,27 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" /> <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<nav class="navbar navbar-expand-lg bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center text-white" href="/">
-    <img src="./images/snail-logo.png" alt="Community Portal"
-         class="img-fluid" style="width: 40px; height: auto;">
-  </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link <%= title === 'Home' ? 'active' : '' %> text-white hover-text-warning" href="/">Home</a>
-        <a class="nav-link <%= title === 'Events' ? 'active' : '' %> text-white hover-text-warning" href="/events">Events</a>
-        <a class="nav-link <%= title === 'Contact' ? 'active' : '' %> text-white hover-text-warning" href="/contact">Contact</a>
-        <a class="nav-link <%= title === 'About' ? 'active' : '' %> text-white hover-text-warning" href="/about">About</a>
-      </div>
-    </div>
-  </div>
-</nav>
 
-<body>
+<header>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center text-white" href="/">
+                <img src="./images/snail-logo.png" alt="Community Portal"
+                class="img-fluid" style="width: 40px; height: auto;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav" style="margin-left: 3em;">
+                    <a class="nav-link <%= title === 'Home' ? 'active' : '' %> text-white hover-text-warning" href="/">Home</a>
+                    <a class="nav-link <%= title === 'Events' ? 'active' : '' %> text-white hover-text-warning" href="/events">Events</a>
+                    <a class="nav-link <%= title === 'Contact' ? 'active' : '' %> text-white hover-text-warning" href="/contact">Contact</a>
+                    <a class="nav-link <%= title === 'About' ? 'active' : '' %> text-white hover-text-warning" href="/about">About</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+</header>
