squiggly lines yellow now

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,9 +4,9 @@
 <div class="container text-center mt-5">
   <div class="welcome-container px-5">
     <h1 class="mb-4"><%= heading %></h1>
-    <p class="squigly">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
+    <p class="squigly text-warning">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
     <p class="py-2 px-5"><%= welcomeParagraph %></p>
-    <p class="squigly">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
+    <p class="squigly text-warning">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
   </div>
 
   <div class="card-container justify-content-center d-flex gap-3 flex-wrap">
