moved images file structure around

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -12,7 +12,7 @@
           <div class="card-body bg-dark">
             <p class="card-text text-white">
               <strong class="text-warning">Name:</strong> <%= member.name %><br>
-              <strong class="text-warning">Role:</strong> <%= member.role %>
+              <strong class="text-warning">Role:</strong> <%- member.role %>
             </p>
           </div>
         </div>
