Ensure that  footer stays at bottom of screen.

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<div class="container mt-5 d-flex flex-column justify-content-center align-items-center">
+<div id="mainContact" class="container mt-5 d-flex flex-column justify-content-center align-items-center">
   <h1 class="text-center mb-4">Contact Us</h1>
   <div class="card p-4 shadow w-100 form-narrow bg-dark">
     <form id="contactForm" method="POST" action="/contact" novalidate>
