--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -2,7 +2,7 @@
 
 <%- include('../partials/header') %>
 <!--cards made by Bootstrap-->
-<div class="container mt-5">
+<div id="eventsMain" class="container mt-5">
   <h1 class="mb-4 text-center">Upcoming Events</h1>
   <div class="row g-4">
     <% events.forEach(event => { %>
