--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,7 +1,8 @@
 <!--Home: Welcome message + placeholder for upcoming events (dynamic later)-->
 
 <%- include('../partials/header') %>
-<div class="container text-center mt-5">
+
+<div id="mainHome" class="container text-center mt-5">
   <div class="welcome-container px-5">
     <h1 class="mb-4"><%= heading %></h1>
     <p class="squigly text-warning">\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/</p>
