--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,6 +1,6 @@
 
 <%- include('../partials/header') %>
-<div class="container mt-5 d-flex flex-column justify-content-center align-items-center">
+<div id="mainThank" class="container mt-5 d-flex flex-column justify-content-center align-items-center">
     <div class="thankYouMessage text-center">
         <h1>Thank You!</h1>
         <p>Your message has been received. We appreciate your feedback and will get back to you shortly.</p>
