Added comments to describe purpose of the page.

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,4 +1,5 @@
-<!--About: Info about the team or organization (from an array in the backend)-->
+<!--About: Info about the team or organization (from an array in the backend, in data folder)-->
+
 <%- include ('../partials/header') %>
 
 <div id="mainAbout" class = "container mt-5">
