--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,3 +1,5 @@
+<!--Contact: Simple contact form (name, email, message) – stores to in-memory array within data folder-->
+
 <%- include('../partials/header') %>
 
 <div id="mainContact" class="container mt-5 d-flex flex-column justify-content-center align-items-center">
