--- a/views/pages/events.ejs
+++ b/views/pages/events.ejs
@@ -1,4 +1,4 @@
-<!--Events: Displays all events with title, date, location, and image (from an array)  -->
+<!--Events: Displays all events with title, date, location, and image (from an array in data folder)  -->
 
 <%- include('../partials/header') %>
 <!--cards made by Bootstrap-->
