--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,4 +1,4 @@
-<!--Home: Welcome message + placeholder for upcoming events (dynamic later)-->
+<!--Home: Welcome message + updated upcoming events using dynamic-->
 
 <%- include('../partials/header') %>
 
