--- a/views/pages/thankyou.ejs
+++ b/views/pages/thankyou.ejs
@@ -1,3 +1,4 @@
+<!--Thank You: Confirmation page after form submission-->
 
 <%- include('../partials/header') %>
 <div id="mainThank" class="container mt-5 d-flex flex-column justify-content-center align-items-center">
