Included link for belgium campus in the footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -38,7 +38,7 @@
                 <div class="text-center">
                     <p>
                         Copyright @2025 All right reserved by:
-                        <a href="#" style="text-decoration: none;">
+                        <a href="https://www.belgiumcampus.ac.za/" style="text-decoration: none;">
                             <strong class ="text-warning"> Belgium Campus</strong>
                         </a>
                     </p>
